# clp

./: configure.ac
BuildTools/: coin.m4
Clp/: CMakeLists.txt  configure.ac
CoinUtils/: CMakeLists.txt  configure.ac
Osi/: configure.ac
